; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_varobj.c_cppop.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_varobj.c_cppop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpstack = type { i8*, %struct.cpstack* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.cpstack**)* @cppop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @cppop(%struct.cpstack** %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.cpstack**, align 8
  %4 = alloca %struct.cpstack*, align 8
  %5 = alloca i8*, align 8
  store %struct.cpstack** %0, %struct.cpstack*** %3, align 8
  %6 = load %struct.cpstack**, %struct.cpstack*** %3, align 8
  %7 = load %struct.cpstack*, %struct.cpstack** %6, align 8
  %8 = getelementptr inbounds %struct.cpstack, %struct.cpstack* %7, i32 0, i32 0
  %9 = load i8*, i8** %8, align 8
  %10 = icmp eq i8* %9, null
  br i1 %10, label %11, label %18

11:                                               ; preds = %1
  %12 = load %struct.cpstack**, %struct.cpstack*** %3, align 8
  %13 = load %struct.cpstack*, %struct.cpstack** %12, align 8
  %14 = getelementptr inbounds %struct.cpstack, %struct.cpstack* %13, i32 0, i32 1
  %15 = load %struct.cpstack*, %struct.cpstack** %14, align 8
  %16 = icmp eq %struct.cpstack* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %11
  store i8* null, i8** %2, align 8
  br label %32

18:                                               ; preds = %11, %1
  %19 = load %struct.cpstack**, %struct.cpstack*** %3, align 8
  %20 = load %struct.cpstack*, %struct.cpstack** %19, align 8
  store %struct.cpstack* %20, %struct.cpstack** %4, align 8
  %21 = load %struct.cpstack*, %struct.cpstack** %4, align 8
  %22 = getelementptr inbounds %struct.cpstack, %struct.cpstack* %21, i32 0, i32 0
  %23 = load i8*, i8** %22, align 8
  store i8* %23, i8** %5, align 8
  %24 = load %struct.cpstack**, %struct.cpstack*** %3, align 8
  %25 = load %struct.cpstack*, %struct.cpstack** %24, align 8
  %26 = getelementptr inbounds %struct.cpstack, %struct.cpstack* %25, i32 0, i32 1
  %27 = load %struct.cpstack*, %struct.cpstack** %26, align 8
  %28 = load %struct.cpstack**, %struct.cpstack*** %3, align 8
  store %struct.cpstack* %27, %struct.cpstack** %28, align 8
  %29 = load %struct.cpstack*, %struct.cpstack** %4, align 8
  %30 = call i32 @xfree(%struct.cpstack* %29)
  %31 = load i8*, i8** %5, align 8
  store i8* %31, i8** %2, align 8
  br label %32

32:                                               ; preds = %18, %17
  %33 = load i8*, i8** %2, align 8
  ret i8* %33
}

declare dso_local i32 @xfree(%struct.cpstack*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
